--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,9 @@ body {
     --subtext-color: #434455;
     --main-title-color: #FFFFFF;
     --footer-text: #E7E9FC;
-    --logo-part: #F4F4FD;
-    --main-background-color: #2E2F42;
-    --second-background: #F4F4FD;
-    --background-team-card: #FFFFFF;
+    --background-color: #F4F4FD;
+    --background-btn-hover: #404BBF;
+    
 }
 .list {
 list-style: none;
@@ -30,15 +29,10 @@ text-decoration: none;
     font-size: 18px;
     line-height: 1.33;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: var(--nav-color)
 }
 .header-logo-part {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.33;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: var(--second-text-color)
 }
 .header-list {
@@ -52,60 +46,53 @@ text-decoration: none;
     letter-spacing: 0.02em;
     color: var(--second-text-color)
 }
-.header-link:hover,
-.header-link:focus {
-    color: var(--nav-color)
-}
-.header-link:active {
-    color: var(--nav-color)
+.header-link:hover,.header-link:focus {
+    color: var(--background-btn-hover)
 }
 .header-mail {
+    font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtext-color)     
 }
-.header-mail:hover,
-.header-mail:focus {
-    color: var(--nav-color)
-}
-.header-mail:active {
-    color: var(--nav-color)
+.header-mail:hover,.header-mail:focus {
+    color: var(--background-btn-hover)
 }
 .header-tel {
+    font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--subtext-color)    
 }
-.header-tel:hover,
-.header-tel:focus {
-    color: var(--nav-color)
-}
-.header-tel:active {
-    color: var(--nav-color)
+.header-tel:hover,.header-tel:focus {
+    color: var(--background-btn-hover)
 }
 .hero {
-    background: var(--main-background-color)
+    text-align: center;
+    background: var(--second-text-color)
 }
 .hero-title {
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    text-align: center;
     color: var(--main-title-color)
 }
 .hero-btn {
     font-family: inherit;
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
-    align-items: center;
     letter-spacing: 0.04em;
-    color: #FFFFFF;
-    background: #4D5AE5;
+    color: var(--main-title-color);
+    background: var(--nav-color);
     cursor: pointer;
+}
+.hero-btn:hover,.hero-btn:focus {
+    background: var(--background-btn-hover);
+
 }
 .visually-hidden {
     position: absolute;
@@ -140,18 +127,20 @@ text-decoration: none;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
     text-transform: capitalize;
     color: var(--second-text-color)
 }
 .mobile-list {
 }
 .team {
-    background: var(--second-background)
+    background: var(--background-color)
 }
 .team-title {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
+    text-align: center;
     text-transform: capitalize;
     color: var(--second-text-color)
 
@@ -159,7 +148,7 @@ text-decoration: none;
 .team-list {
 }
 .team-card {
-    background: var(--background-team-card)
+    background: var(--main-title-color)
 }
 .team-name {
     font-weight: 500;
@@ -175,13 +164,19 @@ text-decoration: none;
     color: var(--subtext-color)
 }
 .footer {
-    background: var(--main-background-color)
+    background: var(--second-text-color)
 }
 .footer-logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: var(--nav-color)
 }
 .footer-logo-part {
-    color: var(--logo-part)
+    color: var(--background-color)
 }
 .footer-text {
     font-size: 16px;
@@ -211,34 +206,21 @@ text-decoration: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    display: flex;
-    align-items: center;
-    text-align: center;
     letter-spacing: 0.04em;
-    color: #4D5AE5;
-    background: #F4F4FD;
-    border: 1px solid #E7E9FC;
+    color: var(--nav-color);
+    background: var(--background-color);
+    border: 1px solid var(--footer-text);
     border-radius: 4px;
     cursor: pointer;
 }
-.portfolio {
-}
-.portfolio-title {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+.button-text:hover,.button-text:focus {
+    background: var(--background-btn-hover);
+    color: var(--main-title-color)
 }
 .portfolio-list {
 }
 .portfolio-card {
-    background: #FFFFFF;
+    background: var(--main-title-color);
 }
 .portfolio-suptitle {
     font-weight: 500;
